--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,24 @@
 <resources>
-    <string name="app_name">AdoptappV1</string>
+    <string name="app_name">Adoptapp</string>
     <string name="title_activity_tienda">Tienda</string>
+    <string name="title_activity_login">Sign in</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="title_activity_nuber_maps">Map</string>
+    <string name="title_activity_yuber_maps">Map</string>
+    <string name="log_out">Sign out</string>
+    <string name="new_itesm">New Item</string>
+    <string name="log_out_string">Sign Out</string>
+    <string name="buy_item_string">Buy a New Item</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
